[gd_scene load_steps=4 format=3 uid="uid://cy0hudn5cqupe"]

[ext_resource type="Script" uid="uid://cxvqq06wa1jkg" path="res://systems/stats/stats_menu.gd" id="1_r40g3"]
[ext_resource type="Texture2D" uid="uid://b5r3hqmbs000r" path="res://UI/THEMES/nine_path_panel.png" id="2_5dorl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o5t0m"]
texture = ExtResource("2_5dorl")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 5.0

[node name="StatsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_r40g3")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxTexture_o5t0m")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Stats"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox"]
clip_contents = false
layout_mode = 2

[node name="StatsList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
